@@ -7,6 +7,8 @@ git-repair (1.20131119) UNRELEASED; urgency=low
     and this hides other problems.
   * Write a dummy .git/HEAD if the file is missing or corrupt, as
     git otherwise will not treat the repository as a git repo.
+  * Improve fsck code to find badly corrupted objects that crash git fsck
+    before it can complain about them.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Nov 2013 17:16:56 -0400
 
